Update JEI and Jade integration, fix bug when loading ingredients