@@ -3,12 +3,12 @@ package com.sihenzhang.crockpot.integration.jei;
 import com.sihenzhang.crockpot.CrockPot;
 import com.sihenzhang.crockpot.base.FoodCategory;
 import com.sihenzhang.crockpot.recipe.FoodValuesDefinition;
-import mezz.jei.api.constants.VanillaTypes;
-import mezz.jei.api.gui.IRecipeLayout;
+import mezz.jei.api.gui.builder.IRecipeLayoutBuilder;
 import mezz.jei.api.gui.drawable.IDrawable;
-import mezz.jei.api.gui.ingredient.IGuiItemStackGroup;
 import mezz.jei.api.helpers.IGuiHelper;
-import mezz.jei.api.ingredients.IIngredients;
+import mezz.jei.api.recipe.IFocusGroup;
+import mezz.jei.api.recipe.RecipeIngredientRole;
+import mezz.jei.api.recipe.RecipeType;
 import mezz.jei.api.recipe.category.IRecipeCategory;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.TranslatableComponent;
@@ -17,10 +17,8 @@ import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class FoodValuesCategory implements IRecipeCategory<FoodValuesDefinition.FoodCategoryMatchedItems> {
-    public static final ResourceLocation UID = new ResourceLocation(CrockPot.MOD_ID, "food_values");
     private final IDrawable background;
     private final IDrawable icon;
 
@@ -29,14 +27,21 @@ public class FoodValuesCategory implements IRecipeCategory<FoodValuesDefinition.
         this.icon = guiHelper.createDrawable(new ResourceLocation(CrockPot.MOD_ID, "textures/gui/jei/icons.png"), 16, 0, 16, 16);
     }
 
+    @SuppressWarnings("removal")
     @Override
     public ResourceLocation getUid() {
-        return FoodValuesCategory.UID;
+        return this.getRecipeType().getUid();
+    }
+
+    @SuppressWarnings("removal")
+    @Override
+    public Class<? extends FoodValuesDefinition.FoodCategoryMatchedItems> getRecipeClass() {
+        return this.getRecipeType().getRecipeClass();
     }
 
     @Override
-    public Class<? extends FoodValuesDefinition.FoodCategoryMatchedItems> getRecipeClass() {
-        return FoodValuesDefinition.FoodCategoryMatchedItems.class;
+    public RecipeType<FoodValuesDefinition.FoodCategoryMatchedItems> getRecipeType() {
+        return ModIntegrationJei.FOOD_VALUES_RECIPE_TYPE;
     }
 
     @Override
@@ -55,25 +60,11 @@ public class FoodValuesCategory implements IRecipeCategory<FoodValuesDefinition.
     }
 
     @Override
-    public void setIngredients(FoodValuesDefinition.FoodCategoryMatchedItems recipe, IIngredients ingredients) {
-        ingredients.setInputs(VanillaTypes.ITEM, recipe.items().stream().map(Item::getDefaultInstance).collect(Collectors.toList()));
-        ingredients.setOutput(VanillaTypes.ITEM, FoodCategory.getItemStack(recipe.category()));
-    }
-
-    @Override
-    public void setRecipe(IRecipeLayout recipeLayout, FoodValuesDefinition.FoodCategoryMatchedItems recipe, IIngredients ingredients) {
-        IGuiItemStackGroup guiItemStacks = recipeLayout.getItemStacks();
-        int slot = 0;
-        for (int row = 0; row < 5; row++) {
-            for (int col = 0; col < 9; col++) {
-                guiItemStacks.init(slot++, true, 2 + col * 18, 25 + row * 18);
-            }
+    public void setRecipe(IRecipeLayoutBuilder builder, FoodValuesDefinition.FoodCategoryMatchedItems recipe, IFocusGroup focuses) {
+        List<List<ItemStack>> pagedItemStacks = JeiUtils.getPagedItemStacks(recipe.items().stream().map(Item::getDefaultInstance).toList(), focuses, RecipeIngredientRole.INPUT, 45);
+        for (int i = 0; i < pagedItemStacks.size(); i++) {
+            builder.addSlot(RecipeIngredientRole.INPUT, 3 + i % 9 * 18, 26 + i / 9 * 18).addItemStacks(pagedItemStacks.get(i));
         }
-        guiItemStacks.init(slot, false, 74, 2);
-        List<List<ItemStack>> pagedIngredientsInputs = JeiUtils.getPagedIngredients(recipeLayout, ingredients, 45, true);
-        for (int i = 0; i < pagedIngredientsInputs.size(); i++) {
-            guiItemStacks.set(i, pagedIngredientsInputs.get(i));
-        }
-        guiItemStacks.set(slot, ingredients.getOutputs(VanillaTypes.ITEM).get(0));
+        builder.addSlot(RecipeIngredientRole.OUTPUT, 75, 3).addItemStack(FoodCategory.getItemStack(recipe.category()));
     }
 }
