@@ -1,7 +1,5 @@
 package com.sihenzhang.crockpot.integration.jei;
 
-import com.google.common.cache.Cache;
-import com.google.common.cache.CacheBuilder;
 import com.mojang.blaze3d.vertex.PoseStack;
 import com.mojang.math.Vector3f;
 import com.sihenzhang.crockpot.CrockPot;
@@ -9,12 +7,13 @@ import com.sihenzhang.crockpot.recipe.bartering.PiglinBarteringRecipe;
 import com.sihenzhang.crockpot.util.NbtUtils;
 import com.sihenzhang.crockpot.util.StringUtils;
 import mezz.jei.api.constants.VanillaTypes;
-import mezz.jei.api.gui.IRecipeLayout;
+import mezz.jei.api.gui.builder.IRecipeLayoutBuilder;
 import mezz.jei.api.gui.drawable.IDrawable;
-import mezz.jei.api.gui.ingredient.IGuiIngredient;
-import mezz.jei.api.gui.ingredient.IGuiItemStackGroup;
+import mezz.jei.api.gui.ingredient.IRecipeSlotsView;
 import mezz.jei.api.helpers.IGuiHelper;
-import mezz.jei.api.ingredients.IIngredients;
+import mezz.jei.api.recipe.IFocusGroup;
+import mezz.jei.api.recipe.RecipeIngredientRole;
+import mezz.jei.api.recipe.RecipeType;
 import mezz.jei.api.recipe.category.IRecipeCategory;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.renderer.MultiBufferSource;
@@ -30,28 +29,32 @@ import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 public class PiglinBarteringRecipeCategory implements IRecipeCategory<PiglinBarteringRecipe> {
-    public static final ResourceLocation UID = new ResourceLocation(CrockPot.MOD_ID, "piglin_bartering");
     private final IDrawable background;
     private final IDrawable icon;
-    private final Cache<PiglinBarteringRecipe, IGuiIngredient<ItemStack>> cachedInputGuiIngredients;
 
     public PiglinBarteringRecipeCategory(IGuiHelper guiHelper) {
         this.background = guiHelper.createDrawable(new ResourceLocation(CrockPot.MOD_ID, "textures/gui/jei/piglin_bartering.png"), 0, 0, 176, 112);
         this.icon = guiHelper.createDrawable(new ResourceLocation(CrockPot.MOD_ID, "textures/gui/jei/icons.png"), 32, 0, 16, 16);
-        this.cachedInputGuiIngredients = CacheBuilder.newBuilder().maximumSize(16).build();
     }
 
+    @SuppressWarnings("removal")
     @Override
     public ResourceLocation getUid() {
-        return PiglinBarteringRecipeCategory.UID;
+        return this.getRecipeType().getUid();
+    }
+
+    @SuppressWarnings("removal")
+    @Override
+    public Class<? extends PiglinBarteringRecipe> getRecipeClass() {
+        return this.getRecipeType().getRecipeClass();
     }
 
     @Override
-    public Class<? extends PiglinBarteringRecipe> getRecipeClass() {
-        return PiglinBarteringRecipe.class;
+    public RecipeType<PiglinBarteringRecipe> getRecipeType() {
+        return ModIntegrationJei.PIGLIN_BARTERING_RECIPE_TYPE;
     }
 
     @Override
@@ -70,42 +73,24 @@ public class PiglinBarteringRecipeCategory implements IRecipeCategory<PiglinBart
     }
 
     @Override
-    public void setIngredients(PiglinBarteringRecipe recipe, IIngredients ingredients) {
-        ingredients.setInputIngredients(recipe.getIngredients());
-        ingredients.setOutputs(VanillaTypes.ITEM, recipe.getWeightedResults().unwrap().stream().map(e -> NbtUtils.setLoreString(e.getData().item.getDefaultInstance(), StringUtils.formatCountAndChance(e, recipe.getWeightedResults().totalWeight))).collect(Collectors.toList()));
+    public void setRecipe(IRecipeLayoutBuilder builder, PiglinBarteringRecipe recipe, IFocusGroup focuses) {
+        builder.addSlot(RecipeIngredientRole.INPUT, 32, 3).setSlotName("inputSlot").addIngredients(recipe.getIngredient());
+        List<ItemStack> weightedOutput = recipe.getWeightedResults().unwrap().stream().map(e -> NbtUtils.setLoreString(e.getData().item.getDefaultInstance(), StringUtils.formatCountAndChance(e, recipe.getWeightedResults().totalWeight))).toList();
+        List<List<ItemStack>> pagedItemStacks = JeiUtils.getPagedItemStacks(weightedOutput, focuses, RecipeIngredientRole.OUTPUT, 30);
+        for (int i = 0; i < pagedItemStacks.size(); i++) {
+            builder.addSlot(RecipeIngredientRole.OUTPUT, 84 + i % 5 * 18, 2 + i / 5 * 18).addItemStacks(pagedItemStacks.get(i));
+        }
     }
 
     @Override
-    public void setRecipe(IRecipeLayout recipeLayout, PiglinBarteringRecipe recipe, IIngredients ingredients) {
-        IGuiItemStackGroup guiItemStacks = recipeLayout.getItemStacks();
-        int slot = 0;
-        guiItemStacks.init(slot++, true, 31, 2);
-        for (int row = 0; row < 6; row++) {
-            for (int col = 0; col < 5; col++) {
-                guiItemStacks.init(slot++, false, 84 + col * 18, 2 + row * 18);
-            }
-        }
-        List<List<ItemStack>> pagedIngredientsOutputs = JeiUtils.getPagedIngredients(recipeLayout, ingredients, 30, false);
-        guiItemStacks.set(0, ingredients.getInputs(VanillaTypes.ITEM).get(0));
-        for (int i = 0; i < pagedIngredientsOutputs.size(); i++) {
-            guiItemStacks.set(i + 1, pagedIngredientsOutputs.get(i));
-        }
-
-        cachedInputGuiIngredients.put(recipe, guiItemStacks.getGuiIngredients().get(0));
-    }
-
-    @Override
-    public void draw(PiglinBarteringRecipe recipe, PoseStack stack, double mouseX, double mouseY) {
+    public void draw(PiglinBarteringRecipe recipe, IRecipeSlotsView recipeSlotsView, PoseStack stack, double mouseX, double mouseY) {
         Piglin piglin = EntityType.PIGLIN.create(Minecraft.getInstance().level);
         piglin.setImmuneToZombification(true);
         piglin.setItemSlot(EquipmentSlot.MAINHAND, Items.GOLDEN_SWORD.getDefaultInstance());
-        IGuiIngredient<ItemStack> inputGuiIngredient = cachedInputGuiIngredients.getIfPresent(recipe);
-        if (inputGuiIngredient != null) {
-            ItemStack inputStack = inputGuiIngredient.getDisplayedIngredient();
-            if (inputStack != null) {
-                piglin.setItemSlot(EquipmentSlot.OFFHAND, inputStack);
-                piglin.getBrain().setMemory(MemoryModuleType.ADMIRING_ITEM, true);
-            }
+        Optional<ItemStack> inputStack = recipeSlotsView.findSlotByName("inputSlot").flatMap(slot -> slot.getDisplayedIngredient(VanillaTypes.ITEM_STACK));
+        if (inputStack.isPresent()) {
+            piglin.setItemSlot(EquipmentSlot.OFFHAND, inputStack.get());
+            piglin.getBrain().setMemory(MemoryModuleType.ADMIRING_ITEM, true);
         }
         boolean emptyInOffhand = piglin.getOffhandItem().isEmpty();
         // if Piglin is not holding item in offhand, it will look at the mouse
